# Caterva2

./: .gitignore  .pre-commit-config.yaml  6941.cc0d6a3.js  ANNOUNCE.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README-DEVELOPERS.md  README-JUPYTERLITE.md  README-PUBSUB.md  README.md  README_bak.md  RELEASE_NOTES.md  RELEASING.rst  SPECS.md  TESTING-LLM.md  Video2-Using_Notebook_Client.ipynb  Video5-SSoT_and_LazyExprs.ipynb  cat2-server.sample.toml  caterva2-server.sample.toml  caterva2-standalone.sample.toml  caterva2.sample.toml  client.py  jupyter-lite.json  package.json  pyodide-migration.md  pyproject.toml  qodana.yaml  requirements.txt  server.py  start_test_daemons.sh  vite.config.js
.github/workflows/: python-app-arm64.yml  python-app.yml  python-publish.yml  python-wheel.yml
caterva2/: __init__.py  api.py  api_utils.py  b2_utils.py  client.py  hdf5.py  models.py  urllib3_transport.py  utils.py
caterva2/clients/: agent.py  cli.py  cli_utils.py  tbrowser.py
caterva2/services/: bro.py  db.py  dirroot.py  hdf5root.py  notebook.py  pub.py  pubroot.py  schemas.py  server.py  settings.py  srv_utils.py  sub.py  users.py
caterva2/services/lite-config/: jupyter-lite.json
caterva2/services/llm_agent/: __init__.py  config.py  core.py  providers.py  schemas.py  sessions.py  tools.py
caterva2/services/plugins/image/: __init__.py
caterva2/services/plugins/image/templates/: display.html
caterva2/services/plugins/tomography/: __init__.py
caterva2/services/plugins/tomography/templates/: display.html  display_one.html
caterva2/services/static/: main.css  main.js
caterva2/services/subscriber/: __init__.py  db.py  schemas.py  users.py
caterva2/services/templates/: base_anon.html  command.html  display_image.html  error.html  forgot-password-ok.html  forgot-password.html  home.html  htmx_path_list.html  info.html  info_metadata.html  info_view.html  loading.html  login.html  logout.html  message.html  meta.html  path_list.html  paths.html  register.html  reset-password.html  root_list.html  search_paths.html  sidebar.html
caterva2/services/templates/emails/: forgot-password.html
caterva2/services/templates/includes/: info_data.html  info_metadata.html  loading.html  prompt.html  root.html
caterva2/tests/: __init__.py  __main__.py  caterva2-login.toml  caterva2-nologin.toml  caterva2-server-login.toml  caterva2-server-nologin.toml  caterva2.toml  conf.py  conftest.py  files.py  services.py  settings-login.py  settings-nologin.py  sub_auth.py  test_api.py  test_cli.py  test_ctable.py  test_hdf5_proxy.py  test_hdf5root.py  test_notebook_bootstrap.py
caterva2/tools/: adduser.py  admin.py  cat2_to_hdf5.py  common.py  create_user.py  hdf5_to_cat2.py
doc/: Caterva2.rst  conf.py  index.rst  requirements.txt
doc/_static/: Caterva2-logo.xcf  caterva2-seq.dia  logo-caterva2-horizontal.xcf  logo-caterva2.xcf
doc/_static/css/: custom.css
doc/getting_started/: index.rst  installation.rst  overview.rst  tutorials.md
doc/reference/: c2context.rst  client_class.rst  dataset_class.rst  file_api.rst  file_class.rst  index.rst  rest_api.rst  root_api.rst  root_class.rst  top_level.rst  utils.rst
doc/tutorial/: index.md
doc/tutorials/: API.md  RESTAPI.md  cli.md  configuration.md  hdf5.md  independent-services.md  index.md  launching-services.md  web-client.md  web-frontend.md
doc/utilities/: cat2-admin.md  cat2-agent.md  cat2-client.md  cat2-server.md  cat2cli.md  cat2export.md  cat2import.md  index.md
examples/: Caterva2Video.ipynb  Video2-Using_Notebook_Clients.ipynb  Video2.ipynb  Video4 - SSoT_and_LazyExprs.ipynb  Video4-LazyExprs_Using_Notebooks.ipynb  Video4Notebook.ipynb  Video5-SSoT_and_LazyExprs.ipynb  Video5.ipynb  Video6-Cat2Cloud_and_HDF5.ipynb  encode-hdf5-kevlar.py  get-slice.py  large-dataset-indexing.py  lazyexpr-chained.py  query_server.py  query_subscriber.py
jupyterlite-exts/caterva2-save/: .gitignore  README.md  install.json  package.json  tsconfig.json
jupyterlite-exts/caterva2-save/labextension/: package.json
jupyterlite-exts/caterva2-save/labextension/static/: 509.4f5943101b104edfb7cd.js  728.d1f4d4e68f6fc605ae10.js  remoteEntry.4d87890bf46c64840c78.js  style.js  third-party-licenses.json
jupyterlite-exts/caterva2-save/src/: index.ts
jupyterlite-exts/caterva2-save/style/: base.css
plans/: b2z-h5-tree.md  ctable-support-orig-gpt5.5.md  ctable-support-tasks.md  ctable-support.md  ss-llm-agent.md
requirements.d/: bro.txt  caterva2.txt  cli.txt  pub.txt  sub.txt  test.txt
root-data/: ds-1d.b2nd
root-data/dir1/: ds-3d.b2nd
root-example/: README.md  ds-1d-b.b2nd  ds-1d-fields.b2nd  ds-2d-fields.b2nd  ds-hello.b2  ds-sc-attr.b2nd  root-example.h5  test-llm.ipynb
root-example/dir1/: ds-2d.b2nd
root-example/dir2/: ds-4d.b2nd
scripts/: create_user.py  rename.sh
src/: bro.py  cli.py  main.js  main.scss  models.py  pub.py  pygments.css  sub.py  tbrowser.py  utils.py
test-data/: ds-1d.b2nd
test-data/dir1/: ds-2d.b2nd  ds-4d.b2nd
test-images/: encode-grok-numbers.py
tests/: conftest.py  services.py  supervisor.conf  test.py  test_api.py  test_cli.py
wheels/: caterva2-2025.12.4.dev0-py3-none-any.whl  latest.txt
wheels-staging/: caterva2-2025.12.4.dev0-py3-none-any.whl  commit.txt  ref.txt
