###############################################################################
# Caterva2 - On demand access to remote Blosc2 data repositories
#
# Copyright (c) 2023 ironArray SLU <contact@ironarray.io>
# https://www.blosc.org
# License: GNU Affero General Public License v3.0
# See LICENSE.txt for details about copyright and rights to use.
###############################################################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caterva2"
description = "A high-performance storage and computation system for Blosc2 datasets"
long-description = "README.md"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "ironArray SLU", email = "contact@ironarray.io"},
]
dynamic = ["version"]
keywords = ["pubsub", "blosc2"]
license = {text = "GNU Affero General Public License version 3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    "httpx",
    "numpy",
    "requests",  # For the client (works with pyodide too)
    "tomli>=2;python_version<\"3.11\"",
]

[tool.hatch.version]
path = "caterva2/__init__.py"

[project.optional-dependencies]
base-services = [
    "blosc2>=3.0.0",
    "fastapi>=0.109",
    "fastapi_websocket_pubsub",
    "pydantic>=2",
    "safer",
    "uvicorn",
    "watchfiles",
]
subscriber = [
    "aiosqlite",
    "caterva2[base-services]",
    "fastapi-mail",
    "fastapi-users[sqlalchemy]",
    "uvicorn[standard]",
    "furl",
    "jinja2",
    "markdown",
    "nbconvert",
    "pillow",
    "python-dotenv",
    "python-multipart",
    "jupyterlite-core[contents]==0.6.0a1",
    "jupyterlite-pyodide-kernel==0.6.0a1",
]
services = [
    "caterva2[base-services]",
    "caterva2[subscriber]",
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
# Currently used to enable HDF5 support at the publisher.
hdf5 = [
    "h5py",
    "hdf5plugin",
    "msgpack",
]
clients = [
    "rich",
    "textual",
]
tools = [
    "caterva2[hdf5]",
    "blosc2",
]
tests = [
    "caterva2[clients]",
    "caterva2[services]",
    "pytest<8",
]
blosc2-plugins = [
    "blosc2-grok",
]

[tool.hatch.build.targets.wheel]
only-include = ["caterva2", "root-example"]

[project.urls]
Home = "https://github.com/ironArray/Caterva2"

[project.scripts]
cat2bro = "caterva2.services.bro:main"
cat2pub = "caterva2.services.pub:main"
cat2sub = "caterva2.services.sub:main"
cat2cli = "caterva2.clients.cli:main"
cat2tbrowser = "caterva2.clients.tbrowser:main"
cat2import = "caterva2.tools.hdf5_to_cat2:main"
cat2export = "caterva2.tools.cat2_to_hdf5:main"
cat2adduser = "caterva2.tools.adduser:main"

[tool.ruff]
line-length = 109

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "C90",
    "I",
    "NPY",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "TCH",
    "UP",
]
ignore = [
    "B008",  # function call in default argument is normal in FastAPI
    "B028",
    "C901",  # Checks for functions with a high McCabe complexity
    "PT011",
    "SIM103",
    "RET505",
    "RET508",
    "RUF005",
    "RUF015",
    "SIM108",
    "UP038",  # https://github.com/astral-sh/ruff/issues/7871
]

[tool.ruff.lint.extend-per-file-ignores]
"caterva2/tests/**" = ["F841", "SIM115"]
